Action bar finally working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Gift Idea Reminder</string>
+    <string name="drawer_open">Gift Idea Reminder</string>
+    <string name="drawer_close">Gift Idea Reminder</string>
 </resources>
