--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Gift Idea Reminder</string>
-    <string name="drawer_open">Gift Idea Reminder</string>
-    <string name="drawer_close">Gift Idea Reminder</string>
+    <string name="navigation_drawer_open">Opened drawer</string>
+    <string name="navigation_drawer_close">Closed Drawer</string>
+
 </resources>
